[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/guild_bar/add_server_dialog.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/sidebar/guild_bar/browse_servers_panel.tscn" id="2"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.184, 0.192, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
content_margin_left = 24.0
content_margin_top = 20.0
content_margin_right = 24.0
content_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="add_btn_normal"]
bg_color = Color(0.345, 0.396, 0.949, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="add_btn_hover"]
bg_color = Color(0.443, 0.487, 0.957, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="add_btn_pressed"]
bg_color = Color(0.3105, 0.3564, 0.8541, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[node name="AddServerDialog" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)
mouse_filter = 0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(480, 0)
theme_override_styles/panel = SubResource("panel_style")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add a Server"
theme_override_font_sizes/font_size = 20

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
text = "âœ•"
flat = true

[node name="TabContainer" type="TabContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 340)

[node name="Enter URL" type="VBoxContainer" parent="CenterContainer/Panel/VBox/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Description" type="Label" parent="CenterContainer/Panel/VBox/TabContainer/Enter URL"]
layout_mode = 2
text = "Enter a server URL or invite link"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="ServerUrlLabel" type="Label" parent="CenterContainer/Panel/VBox/TabContainer/Enter URL"]
layout_mode = 2
text = "SERVER URL"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11

[node name="ServerUrlInput" type="LineEdit" parent="CenterContainer/Panel/VBox/TabContainer/Enter URL"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
placeholder_text = "example.com or example.com?invite=CODE"

[node name="AddButton" type="Button" parent="CenterContainer/Panel/VBox/TabContainer/Enter URL"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "Add"
theme_override_styles/normal = SubResource("add_btn_normal")
theme_override_styles/hover = SubResource("add_btn_hover")
theme_override_styles/pressed = SubResource("add_btn_pressed")

[node name="StatusLabel" type="Label" parent="CenterContainer/Panel/VBox/TabContainer/Enter URL"]
visible = false
layout_mode = 2
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
autowrap_mode = 2

[node name="ErrorLabel" type="Label" parent="CenterContainer/Panel/VBox/TabContainer/Enter URL"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.3, 0.3, 1)
autowrap_mode = 2

[node name="Browse Servers" parent="CenterContainer/Panel/VBox/TabContainer" instance=ExtResource("2")]
layout_mode = 2
